--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>Hello World!</title>    
+</head>
+    
+    <body background="images/JBmood.jpg">
+        <h1>What is your Joe Budden Mood today?</h1>
+    
+    </body>
+
+</html>
