--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Hello World!</title>    
 </head>
     
-    <body background="images/JBmood.jpg">
+    <body background="/images/JBmood.jpg">
         <h1>What is your Joe Budden Mood today?</h1>
     
     </body>
