--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>Hello World!</title>    
 </head>
     
-    <body background="/images/JBmood.jpg">
+    <body>
         <h1>What is your Joe Budden Mood today?</h1>
-    
+        <img src="images/JBmood.JPG">    
     </body>
 
 </html>
