JB mood, just the image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     
     <body>
         <h1>What is your Joe Budden Mood today?</h1>
-        <img src="images/JBmood.JPG">    
+        <br>
+        <img src="/images/JBmood.JPG">    
     </body>
 
 </html>
