what does the HTML look like

--- a/explorations/exploringjade.html
+++ b/explorations/exploringjade.html
@@ -1,1 +1,19 @@
-hello world
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>Exploration 1: Jade</title>    
+</head>
+<body>
+    
+    <div>
+  <h1>Xavier's Jade Tutorial</h1>
+  <ul>
+    <li>Jade</li>
+    <li>Makes HTML so much easier</li>
+  </ul>
+  <p>You can program the exact same thing in JADE as you do in HTML without all the extra tags!</p>
+</div>
+
+</body>
+
+</html>
